--- a/src/components/clarity.astro
+++ b/src/components/clarity.astro
@@ -16,3 +16,16 @@
     y.parentNode.insertBefore(t, y);
   })(window, document, 'clarity', 'script', 's65vt9ae4z');
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4Q0BG0JPGP"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'G-4Q0BG0JPGP');
+</script>
